# compactp

./: .gitattributes  .gitignore  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  LS.md  LS_DIFF.md  README.md  SECURITY.md  SOURCE_VERSIONS.md  demo.sh  dist-workspace.toml  lefthook.yml  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  fuzz-nightly.yml  public-api.yml  release-plz.yml  release.yml  site.yml
crates/compactp/: Cargo.toml  README.md
crates/compactp/src/: error.rs  input.rs  main.rs  output.rs
crates/compactp/src/commands/: ast.rs  cst.rs  diag.rs  lex.rs  mod.rs  parse.rs  stats.rs  watch.rs
crates/compactp/tests/: cli.rs
crates/compactp/tests/fixtures/: README.md
crates/compactp/tests/fixtures/declarations/: all_declarations.compact
crates/compactp/tests/fixtures/demo/: invalid.compact  outdated.compact
crates/compactp/tests/fixtures/imports/: all_import_forms.compact
crates/compactp/tests/fixtures/recovery/: broken_expressions.compact  missing_semicolons.compact
crates/compactp/tests/snapshots/: cli__ast_human_output.snap  cli__ast_json_output.snap  cli__cst_human_output.snap  cli__cst_json_output.snap  cli__diag_human_output.snap  cli__diag_json_output.snap  cli__lex_human_output.snap  cli__lex_json_output.snap  cli__parse_json_output.snap  cli__stats_human_output.snap  cli__stats_json_output.snap
crates/compactp_ast/: Cargo.toml  README.md
crates/compactp_ast/src/: expr.rs  lib.rs  nodes.rs  support.rs
crates/compactp_diagnostics/: Cargo.toml  README.md
crates/compactp_diagnostics/src/: json.rs  lib.rs  render.rs
crates/compactp_diagnostics/src/snapshots/: compactp_diagnostics__json__tests__render_json_error_diagnostic.snap  compactp_diagnostics__json__tests__render_json_with_secondary_spans.snap  compactp_diagnostics__render__tests__render_human_colored.snap  compactp_diagnostics__render__tests__render_human_error_diagnostic.snap  compactp_diagnostics__render__tests__render_human_multiline_number_gutter.snap  compactp_diagnostics__render__tests__render_human_warning_diagnostic.snap  compactp_diagnostics__render__tests__render_human_with_notes.snap
crates/compactp_lexer/: Cargo.toml  README.md
crates/compactp_lexer/src/: lib.rs
crates/compactp_parser/: Cargo.toml  README.md
crates/compactp_parser/benches/: parse_bench.rs
crates/compactp_parser/src/: event.rs  lib.rs  marker.rs  parser.rs  sink.rs
crates/compactp_parser/src/grammar/: declarations.rs  expressions.rs  imports.rs  mod.rs  patterns.rs  statements.rs  types.rs  version.rs
crates/compactp_parser/tests/: corpus_test.rs
crates/compactp_syntax/: Cargo.toml  README.md
crates/compactp_syntax/src/: lib.rs  syntax_kind.rs
docs/: RELEASE.md  json-schema.md
docs/public-api/: COVERAGE.md  compactp_ast.txt  compactp_diagnostics.txt  compactp_lexer.txt  compactp_parser.txt  compactp_syntax.txt
docs/site/: DESIGN.md
docs/superpowers/plans/: 2026-03-20-compactp-implementation.md
docs/superpowers/specs/: 2026-03-20-compactp-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lex.rs  parse.rs
scripts/: fuzz.sh
site/: CNAME  DESIGN.md  index.html  main.js  styles.css
tests/: corpus_known_failures.txt
tests/corpus/: LICENSE-APACHE-2.0
tests/fixtures/demo/: invalid.compact  valid.compact
