[workspace]
resolver = "3"
members = [
    "crates/compactp_syntax",
    "crates/compactp_lexer",
    "crates/compactp_parser",
    "crates/compactp_ast",
    "crates/compactp_diagnostics",
    "crates/compactp",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Aaron Bassett"]

[workspace.dependencies]
# Internal crates
compactp_syntax = { path = "crates/compactp_syntax" }
compactp_lexer = { path = "crates/compactp_lexer" }
compactp_parser = { path = "crates/compactp_parser" }
compactp_ast = { path = "crates/compactp_ast" }
compactp_diagnostics = { path = "crates/compactp_diagnostics" }

# External dependencies — verify versions with `cargo search` before changing
rowan = "0.16"
logos = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
notify-debouncer-full = "0.7"
notify = "8"
drop_bomb = "0.1"

# Dev dependencies
insta = "1.46"
expect-test = "1.5"
criterion = "0.8"
assert_cmd = "2.2"
walkdir = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
