[package]
name = "compactp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
compactp_lexer = { path = "../crates/compactp_lexer" }
compactp_parser = { path = "../crates/compactp_parser" }
compactp_syntax = { path = "../crates/compactp_syntax" }

[[bin]]
name = "lex"
path = "fuzz_targets/lex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false
