[package]
name = "compactp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
compactp_syntax.workspace = true
compactp_lexer.workspace = true
compactp_parser.workspace = true
compactp_ast.workspace = true
compactp_diagnostics.workspace = true
clap.workspace = true
serde_json.workspace = true
notify-debouncer-full.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
