[package]
name = "compactp_parser"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
compactp_syntax.workspace = true
compactp_lexer.workspace = true
compactp_diagnostics.workspace = true
rowan.workspace = true
drop_bomb.workspace = true

[dev-dependencies]
expect-test.workspace = true
insta.workspace = true
