[package]
name = "compactp_syntax"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rowan.workspace = true

# No panic paths on user input (CONSTITUTION §III). Tests are exempt via
# the standard `#[cfg(test)]` allow-list that clippy applies to lints
# enabled at crate level — library production code must not panic.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
